ajout de photo.html

--- a/index.html
+++ b/index.html
@@ -17,6 +17,11 @@
 			<h1>BRITO</h1>
 			<p>arrive dans...</p>
 			<h2></h2>
+			<div class="pic">
+				<form action="photo.html">
+					<button class="photo" type="submit">?</button>
+				</form>
+			</div>
 		</main>
 		<footer>
 			<h3>Félicitez les parents!</h3>
