--- a/photo.html
+++ b/photo.html
@@ -15,7 +15,9 @@
 			<img src="./Julien.jpg" alt="Photo d'un homme riche" />
 		</div>
 		<footer>
-			<a href="index.html"><p>J'ai peur je veux revenir au compte à rebours</p></a>
+			<a href="index.html"
+				><p class="back">J'ai peur je veux revenir au compte à rebours</p></a
+			>
 		</footer>
 	</body>
 </html>
